# rakuten_tools

./: .gitignore  Home.py  README.md  alembic.ini  env_settings.py  main.py  pyproject.toml  run_server.bat  utils.py
alembic/: env.py
cabinets/: cabinet_handler.py
database/: __init__.py  models.py
database/alembic/: env.py
flows/: campaign_update_flow.py  html_generation.py  ss_campaign_revert_flow.py  ss_campaign_update_flow.py  ss_price_update_flow.py
handlers/: cabinet_handler.py  category_handler.py  database.py  excel_parser.py  html_generator.py  inventory_handler.py  item_handler.py  payload_generator.py
items/: get_item_handler.py  update_item_handler.py  utils.py
items/tmp/: variants_with_attributes.json
models/: cabinet.py  item.py  product_descript.py
page_designs/: enum.py  utils.py
page_designs/templates/: pc-main.html  pc-sub.html
pages/: 1_Parse_Excel_to_HTML.py  1_Shops.py  1_Tools.py  2_Products.py  3_Feature_and_Point_Event_Generator.py  3_Templates.py  3_Tools.py  4_SS_Campaign_Updater.py  4_Settings.py  4_Tools.py  5_SS_Price_Updater.py
pages/hide_pages/: 3_Feature_and_Point_Event_Generator.py
scripts/cabinets/: cabinet_handler.py
scripts/items/: get_item_handler.py  item_handler.py  models.py  update_item_handler.py
scripts/page_designs/: enum.py  excel_parser.py  html_generator.py  models.py  utils.py
scripts/search/: search_handler.py
templates/: mobile.html  product_info_td.json
templates/html/: pc-sub.html
utils/: campaign.py  category.py  item.py  rakuten_url_generator.py  streamlit_utils.py  text.py
(+10 files in other folders)
